# CmakeTutorial

./: CMakeLists.txt  Readme.txt  main.c
dynLib/: CMakeLists.txt  dynLib.c
include/: dynLib.h  statLib.h
statLib/: CMakeLists.txt  statLib.c
